clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/borrow_field_of_another_borrow/borrow_field_of_another_borrow.cbs
// RUN: %clang_cc1 -verify %s

struct V {
  int a;
  int *b;
};

struct K {
	struct V v;
};

void use_mut(int *_Borrow p);
void use_immut(const int *_Borrow p);

void test1() {
  int local = 5;
  struct V v = { .a = 5, .b = &local };
  struct V *_Borrow p = &mut v;
  int *_Borrow q1 = &mut p->a; // expected-note {{mutable borrow occurs here}}
  int *_Borrow q2 = &mut *p->b; // expected-note {{mutable borrow occurs here}}
  const int *_Borrow q3 = &const p->a; // expected-error {{cannot borrow `(*p).a` as immutable because it is also borrowed as mutable}}
  const int *_Borrow q4 = &const *p->b; // expected-error {{cannot borrow `*(*p).b` as immutable because it is also borrowed as mutable}}
  use_mut(q1);
  use_mut(q2);
  use_immut(q3);
  use_immut(q4);

  struct K k = { .v = v };
  p = &mut k.v;
  q1 = &mut p->a; // expected-note {{mutable borrow occurs here}}
  q2 = &mut *p->b; // expected-note {{mutable borrow occurs here}}
  q3 = &const p->a; // expected-error {{cannot borrow `(*p).a` as immutable because it is also borrowed as mutable}}
  q4 = &const *p->b; // expected-error {{cannot borrow `*(*p).b` as immutable because it is also borrowed as mutable}}
  use_mut(q1);
  use_mut(q2);
  use_immut(q3);
  use_immut(q4);
}

void test2(struct V *_Borrow p) {
  int *_Borrow q1 = &mut p->a; // expected-note {{mutable borrow occurs here}}
  int *_Borrow q2 = &mut *p->b; // expected-note {{mutable borrow occurs here}}
  const int *_Borrow q3 = &const p->a; // expected-error {{cannot borrow `(*p).a` as immutable because it is also borrowed as mutable}}
  const int *_Borrow q4 = &const *p->b; // expected-error {{cannot borrow `*(*p).b` as immutable because it is also borrowed as mutable}}
  use_mut(q1);
  use_mut(q2);
  use_immut(q3);
  use_immut(q4);
}

void struct V::foo(This *_Borrow this) {
  int *_Borrow q1 = &mut this->a; // expected-note {{mutable borrow occurs here}}
  int *_Borrow q2 = &mut *this->b; // expected-note {{mutable borrow occurs here}}
  const int *_Borrow q3 = &const this->a; // expected-error {{cannot borrow `(*this).a` as immutable because it is also borrowed as mutable}}
  const int *_Borrow q4 = &const *this->b; // expected-error {{cannot borrow `*(*this).b` as immutable because it is also borrowed as mutable}}
  use_mut(q1);
  use_mut(q2);
  use_immut(q3);
  use_immut(q4);
}